--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ameen4455.calorietracker">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name="com.ameen4455.calorietracker.dev.ameen4455.calorietracker.CaloryTrackerApp"
+        android:name="dev.ameen4455.calorietracker.CaloryTrackerApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CaloryTracker">
         <activity
-            android:name="com.ameen4455.calorietracker.dev.ameen4455.calorietracker.MainActivity"
+            android:name="dev.ameen4455.calorietracker.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CaloryTracker.NoActionBar">
